--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <!-- Hình ảnh giả mạo, khi bấm vào sẽ chuyển hướng -->
-    <img src="https://www.pinterest.com/pin/598697344210599752/" alt="Sản phẩm hot" id="clickableImage">
+    <img src="https://github.com/quocvv/fakelink/blob/master/click.png?raw=true" alt="Sản phẩm hot" id="clickableImage">
 
     <script>
         document.getElementById("clickableImage").addEventListener("click", function() {
-            window.location.href = "https://shopee.vn/link-tiep-thi"; // Thay link Shopee của bạn vào đây
+            window.location.href = "https://shopee.vn"; // Thay link Shopee của bạn vào đây
         });
     </script>
 </body>
