--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- Hình ảnh giả mạo, khi bấm vào sẽ chuyển hướng -->
-    <img src="https://github.com/quocvv/fakelink/blob/master/click.png?raw=true" alt="Sản phẩm hot" id="clickableImage">
+    <img src="https://github.com/quocvv/fakelink/blob/master/click.png" alt="Sản phẩm hot" id="clickableImage">
 
     <script>
         document.getElementById("clickableImage").addEventListener("click", function() {
